--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/nbproject/*
+
+.project
+.buildpath
+.settings
+
 /web/bundles/
 /app/bootstrap.php.cache
 /app/cache/*
@@ -5,11 +11,9 @@
 /app/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
-/app/phpunit.xml
 /build/
 /vendor/
 /bin/
 /composer.phar
-/nbproject/*
-/media/*
+
 *.php~
